Fix navbar on desktop hidden behind toolbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,6 +35,7 @@
   height: var(--bottom-tabs-height);
 
   @media (min-width: $breakpoint-lg) {
+    top: var(--toolbar-height);
     width: rem(256px);
     height: 100%;
     margin-top: 0;
